--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,35 @@
-.App {
-  text-align: center;
+img {
+  width: 20%;
+  height: 25vh;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
+/* Header */
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
+/* All-Products */
 
-.App-title {
-  font-size: 1.5em;
-}
+/* Single-Product */
 
-.App-intro {
-  font-size: large;
-}
+/* Reviews */
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+/* Button */
+
+/* Links */
+
+/* Checkout */
+
+.checkout-title-product {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  margin-left: 44%;
+}
+.cart-products {
+  display: flex;
+  justify-content: space-around;
+}
+.checkout-product-name-price-amount {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 53%;
 }
