--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 img {
-  width: 20%;
+  width: 80%;
   height: 25vh;
 }
 body {
   margin: 0;
   padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Header */
@@ -13,20 +14,25 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #3ABDF9;
 }
   .header-img {
-    width: 15%;
-
+    width: 10%;
+    height: 25vh;
     -webkit-transform: rotate(270deg);
     -moz-transform: rotate(270deg);
     -o-transform: rotate(270deg);
     -ms-transform: rotate(270deg);
     transform: rotate(270deg);
   }
+  h1 {
+    margin: 0;
+  }
 /* All-Products */
 .frontpage-filter-div {
   display: flex;
   height: 15vh;
+  margin-bottom: 30px;
 }
 .header-div {
   display: flex;
@@ -34,11 +40,17 @@ body {
   align-items: center;
 }
 .navlink-div {
-  width: 100%
+  width: 100%;
+  background-color: #3ABDF9;
 }
 .navlink-div a {
   display: flex;
   justify-content: flex-end;
+  text-decoration: none;
+  font-size: 150%;
+  color: white;
+  padding: 5px;
+  margin-right: 35px;
 }
 
 /* Filter */
@@ -59,40 +71,312 @@ body {
 }
 .box-and-radio {
   width: 15%;
+  height: 15vh;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
+.sorting-header {
+  margin-top: -15px;
+}
 .filter-button {
-  height: 75%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  margin-right: 50px;
+}
+.filter-button button {
+  border-radius: 20px;
+  padding: 15px;
+  width: 100%;
+  cursor: pointer;
+}
+.filter-button button:first-of-type {
+  background-color: #00ED01;
+}
+.filter-button button:last-of-type {
+  background-color: red;
+}
+span {
+  display: flex;
+  align-items: center;
+}
+.sortAndFilter {
+  width: 2em;
+  height: 2em;
+}
+.frontpage-products-div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.product-card {
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 30%;
+  margin-bottom: 60px;
+  box-shadow: 4px 4px 4px #2f4f4f;
+}
+.product-card-header {
+  flex: 3;
+}
+.product-header-info {
+  display: flex;
+  flex: 3;
+}
+.product-card-image {
+  width: 80%;
+  height: 25vh;
+}
+.product-card-info {
+  display: flex;
+  flex-direction: column;
+  flex: 2;
+  justify-content: center;
+  margin-right: 10px;
+}
+.product-card-links {
+  height: 5vh;
+  display: flex;
+  justify-content: space-around;
+}
+.product-card-links > button {
+  padding: 5px;
+  height: 4vh;
+  width: 45%;
+  font-size: large;
+  color: gainsboro;
+  border-radius: 10px;
+  background-color: #0095DA;
+  transform: skew(-10deg);
+  cursor: pointer;
+}
+.product-card-links a {
+  width: 30%;
+}
+.product-more-info-button {
+  padding: 5px;
+  height: 4vh;
+  width: 100%;
+  font-size: large;
+  border-radius: 10px;
+  background-color: #FFD445;
+  transform: skew(-10deg);
+  cursor: pointer;
+}
+.product-card-links button:hover {
+  transform: skew(10deg);
 }
 
 /* Single-Product */
+  .single-product-nav-div {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 25px;
+  }
+  .single-product-nav-div a:last-of-type {
+    margin-left: 20px;
+    margin-right: 35px;
+  }
+  .single-product-specific {
+    display: flex;
+    justify-content: space-around;
+  }
+  .single-product-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .single-product-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 13%;
+  }
+  .single-product-button p {
+    font-size: large;
+  }
+  .single-product-button > button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: large;
+    color: gainsboro;
+    padding: 5px;
+    height: 4vh;
+    width: 100%;
+    border-radius: 10px;
+    background-color: #0095DA;
+    transform: skew(-10deg);
+    cursor: pointer;
+  }
 
 /* Reviews */
-
-/* Button */
-
-/* Links */
+  .product-review-form-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .review-name-div {
+    width: 32%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .review-name-div input {
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 150%;
+  }
+  .review-text-div textarea {
+    border-radius: 5px;
+    font-size: 120%;
+  }
+  .review-rating-div {
+    width: 32%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .review-rating-div div {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+  }
+  select {
+    width: 90%;
+    background-color: dodgerblue;
+    color: white;
+    font-size: large;
+  }
+  option {
+    color: white;
+    font-size: large;
+  }
+  .review-rating-div button {
+    border: none;
+    padding: 10px;
+    background-color: dodgerblue;
+    font-size: large;
+    color: white;
+  }
+  .review-header {
+    margin-left: 50px;
+  }
+  .show-review-div {
+    margin-bottom: 60px;
+    box-shadow: 0px 4px 0px #2f4f4f;
+  }
+  .show-review {
+    margin: 5px 50px 0px 50px;
+  }
 
 /* Checkout */
-
+.checkout-navlink {
+  display: flex;
+  justify-content: flex-end;
+  background-color: #3ABDF9;
+}
+.checkout-navlink a {
+  text-decoration: none;
+  font-size: 150%;
+  color: white;
+  padding: 5px;
+  margin-right: 35px;
+}
+.checkout-head-title {
+  text-align: center;
+}
 .checkout-title-product {
   display: flex;
-  justify-content: space-between;
-  width: 50%;
-  margin-left: 44%;
+  justify-content: space-around;
+}
+.checkout-title {
+  font-size: 150%;
+  font-weight: bold;
 }
 .cart-products {
   display: flex;
   justify-content: space-around;
+  width: 99%;
+  margin-bottom: 20px;
+  box-shadow: 4px 4px 4px #2f4f4f;
+}
+.checkout-header-div {
+  display: flex;
+  flex-direction: column;
+  flex: 2;
+}
+.checkout-header-div p {
+  text-align: center;
+  font-size: 150%;
+  font-weight: bold;
 }
 .checkout-product-name-price-amount {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  width: 53%;
+  flex: 3;
+  margin-right: 50px;
+}
+.checkout-product-name-price-amount p {
+  font-size: large;
+}
+.total-price {
+  font-size: 150%;
+  font-weight: bold;
+}
+.reset-order-button {
+  font-size: large;
+  color: gainsboro;
+  padding: 5px;
+  height: 4vh;
+  width: 15%;
+  border-radius: 10px;
+  background-color: #0095DA;
+  transform: skew(-10deg);
+  cursor: pointer;
+}
+.order-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 100px;
+}
+.form-p {
+  margin-bottom: 0;
+}
+.order-input-div {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 25%;
+}
+.order-input-div input {
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 150%;
+  width: 90%;
+}
+.order-input-div input:last-of-type {
+  margin-bottom: 25px;
+}
+.checkout-ordet-button {
+  display: flex;
+  justify-content: flex-end;
+  width: 23%;
+}
+.checkout-ordet-button button {
+  font-size: large;
+  color: gainsboro;
+  padding: 5px;
+  height: 4vh;
+  width: 28%;
+  border-radius: 10px;
+  background-color: #0095DA;
+  transform: skew(-10deg);
+  cursor: pointer;
 }
